--- a/index.html
+++ b/index.html
@@ -1,1 +1,147 @@
-hello world
+<!DOCTYPE html>
+<html>
+<head>
+	<link rel="shortcut icon" type="image" href="image/icone.png">
+	<meta charset="utf-8">
+	<meta name="viewport" content="with=device-width, initial-scale=1.0">
+	<title>Skate Shop</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;1,200;1,500&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
+<script src="https://kit.fontawesome.com/b64577fe18.js" crossorigin="anonymous"></script>
+</head>
+<body>
+	<section class="header" id="home">
+		<nav >
+			<a href="index.html"><img src="image/taswira.png"></a>
+			<div class="nav-links">
+				<i class="fa fa-times" aria-hidden="true"></i>
+				<ul> 
+					<li><a href="#home">home</a></li>
+				    <li><a href="#about">about</a></li>
+				    <li><a href="#course">course</a></li>
+				    <li><a href="#skatepark">skatepark</a></li>
+				    <li><a href="#cantact">contact</a></li>
+				</ul>
+			</div>
+			<i class="fa fa-bars"></i>
+		</nav>
+   <div class="text-box">
+   	<h1>world's Biggest SkateShop</h1>
+   	<p>A skateboard is a type of sports equipment used for skateboarding.<br> They are usually made of a specially designed 7-8 ply maple plywood deck with a polyurethane coating for smoothness<br> and durability and wheels attached to the underside by a pair of skateboarding trucks.</p>
+   	<a href="" class="btn">Visit us to know more</a>
+   </div>
+	</section>
+<!------course------->
+      <div class="video">
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/eE_j5TAhxeg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+<section class="course" id="course">
+	<h1>course we offer</h1>
+	<p>learn how to skate with us </p>
+	<div class="row">
+		<div class="course-col" >
+			<h3>beginner</h3>
+			<p>1hathi bech n7ot fiha kifech bech yet3almou el skate for beginer ma3neha ken awal mara yeskaity fiha w kol bech n3almouh mel loul w jdid</p>
+		</div>
+		<div class="course-col" >
+			<h3>Intermediate</h3>
+			<p>1hathi bech n7ot fiha kifech bech yet3almou el skate for beginer ma3neha ken awal mara yeskaity fiha w kol bech n3almouh mel loul w jdid</p>
+		</div>
+		<div class="course-col" >
+			<h3>Expert</h3>
+			<p>1hathi bech n7ot fiha kifech bech yet3almou el skate for beginer ma3neha ken awal mara yeskaity fiha w kol bech n3almouh mel loul w jdid</p>
+		</div>
+	</div>
+</section>
+
+<!----- brand ----->
+
+<section class="brand">
+	<h1>our deck brand</h1>
+	<p>learn how to skate with us </p>
+
+	<div class="row">
+		<div class="brand-col">
+			<img src="image/skate1.jpg">
+			<div class="layer">
+				<h3>ALMOST</h3>
+			</div>
+		</div>
+		<div class="brand-col">
+			<img src="image/skate2.jpg" >
+			<div class="layer">
+				<h3>Santa Cruz</h3>
+			</div>
+		</div>
+		<div class="brand-col">
+			<img src="image/skate3.jpg">
+			<div class="layer">
+				<h3>Ripndip</h3>
+			</div>
+		</div>
+	</div>
+</section> 
+
+<!----- skatepark ------>
+
+<section class="skatepark" id="skatepark">
+	<h1>our skatepark</h1>
+	<p>learn how to skate with us </p>
+	<div class="row">
+		<div class="skatepark-col">
+			<img src="image/skateparck1.jpg">
+			<h3>world most biggest Skateparck</h3>
+			<p>learn how to skate board with us </p>
+		</div>
+	</div>
+</section>
+<!------- testimonials----->
+<section class="testimonials" id="about">
+	<h1>know more about skate</h1>
+	<p>learn how to skate with us </p>
+	<div class="row">
+		<div class="testimonials-col">
+			<div>
+				<h3>about deck</h3>
+				<p>Modern decks vary in size, but most are 7 to 10.5 inches (18 to 27 cm) wide. Wider decks can be used for greater stability when skateboarding. Standard skateboard decks are usually between 28 and 33 inches (71 and 84 cm) long. The underside of the deck can be printed with a design by the manufacturer, blank, or decorated by any other means. </p>
+				<i class="fas fa-heart"></i>
+				<i class="fas fa-heart"></i>
+				<i class="fas fa-heart"></i>
+				<i class="fas fa-heart"></i>
+			</div>
+		</div>
+		<div class="testimonials-col">
+			<div>
+				<h3>about trucks</h3>
+				<p>Attached to the deck are two metal (usually made of aluminum alloy) trucks, which connect the wheels and bearings to the deck. The trucks are further composed of two parts.The top part of the truck is screwed to the deck and is called the baseplate, and beneath it is the hanger. The axle runs through the hanger. Between the baseplate and the hanger are bushings, also called rubbers or grommets, that provide the cushion mechanism for turning the skateboard.</p>
+				<i class="fas fa-heart"></i>
+				<i class="fas fa-heart"></i>
+				<i class="fas fa-heart"></i>
+			</div>
+		</div>
+	</div>	 
+</section>
+
+<!----- call to action------>
+
+<section class="cta">
+	<h1>for more information contact us</h1>
+	<a href="#facilities" class="hero-btn">CONTACT US</a>
+</section> 
+
+<!------- footer ------>
+
+<section class="footer" id="cantact">
+	<h4>about us</h4>
+	<p>Email: skatecompanies@gmail.com</p>
+	<div class="icons">
+		<i class="fab fa-facebook"></i>
+		<i class="fab fa-twitter"></i>
+		<i class="fab fa-instagram"></i>
+	</div>
+	<p>Made with <i class="far fa-heart"></i> by mohamed boussaada</p>
+</section>
+</body>
+</html>
