--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="shortcut icon" type="image" href="image/icone.png">
+	<link rel="shortcut icon" type="image" href="icone.png">
 	<meta charset="utf-8">
 	<meta name="viewport" content="with=device-width, initial-scale=1.0">
 	<title>Skate Shop</title>
@@ -14,7 +14,7 @@
 <body>
 	<section class="header" id="home">
 		<nav >
-			<a href="index.html"><img src="image/taswira.png"></a>
+			<a href="index.html"><img src="taswira.png"></a>
 			<div class="nav-links">
 				<i class="fa fa-times" aria-hidden="true"></i>
 				<ul> 
@@ -64,19 +64,19 @@
 
 	<div class="row">
 		<div class="brand-col">
-			<img src="image/skate1.jpg">
+			<img src="skate1.jpg">
 			<div class="layer">
 				<h3>ALMOST</h3>
 			</div>
 		</div>
 		<div class="brand-col">
-			<img src="image/skate2.jpg" >
+			<img src="skate2.jpg" >
 			<div class="layer">
 				<h3>Santa Cruz</h3>
 			</div>
 		</div>
 		<div class="brand-col">
-			<img src="image/skate3.jpg">
+			<img src="/skate3.jpg">
 			<div class="layer">
 				<h3>Ripndip</h3>
 			</div>
@@ -91,7 +91,7 @@
 	<p>learn how to skate with us </p>
 	<div class="row">
 		<div class="skatepark-col">
-			<img src="image/skateparck1.jpg">
+			<img src="skateparck1.jpg">
 			<h3>world most biggest Skateparck</h3>
 			<p>learn how to skate board with us </p>
 		</div>
