--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="shortcut icon" type="image" href="icone.png">
+	<link rel="shortcut icon" type="image" href="image/icone.png">
 	<meta charset="utf-8">
 	<meta name="viewport" content="with=device-width, initial-scale=1.0">
 	<title>Skate Shop</title>
@@ -14,9 +14,9 @@
 <body>
 	<section class="header" id="home">
 		<nav >
-			<a href="index.html"><img src="taswira.png"></a>
+			<a href="index.html"><img src="image/taswira.png"></a>
 			<div class="nav-links">
-				<i class="fa fa-times" aria-hidden="true"></i>
+				<i class="fas fa-times"></i></i>
 				<ul> 
 					<li><a href="#home">home</a></li>
 				    <li><a href="#about">about</a></li>
@@ -25,7 +25,7 @@
 				    <li><a href="#cantact">contact</a></li>
 				</ul>
 			</div>
-			<i class="fa fa-bars"></i>
+			<i class="fas fa-bars"></i>
 		</nav>
    <div class="text-box">
    	<h1>world's Biggest SkateShop</h1>
@@ -64,19 +64,19 @@
 
 	<div class="row">
 		<div class="brand-col">
-			<img src="skate1.jpg">
+			<img src="image/skate1.jpg">
 			<div class="layer">
 				<h3>ALMOST</h3>
 			</div>
 		</div>
 		<div class="brand-col">
-			<img src="skate2.jpg" >
+			<img src="image/skate2.jpg" >
 			<div class="layer">
 				<h3>Santa Cruz</h3>
 			</div>
 		</div>
 		<div class="brand-col">
-			<img src="/skate3.jpg">
+			<img src="image/skate3.jpg">
 			<div class="layer">
 				<h3>Ripndip</h3>
 			</div>
@@ -89,9 +89,9 @@
 <section class="skatepark" id="skatepark">
 	<h1>our skatepark</h1>
 	<p>learn how to skate with us </p>
-	<div class="row">
+	<div >
 		<div class="skatepark-col">
-			<img src="skateparck1.jpg">
+			<center><img src="image/skateparck1.jpg"></center>
 			<h3>world most biggest Skateparck</h3>
 			<p>learn how to skate board with us </p>
 		</div>
