--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  	<link rel="shortcut icon" type="image" href="image/icone.png">
+  	<link rel="shortcut icon" type="image" href="icone.png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SkateShop</title>
@@ -85,19 +85,19 @@
 
 	<div class="row">
 		<div class="brand-col">
-			<img src="image/skate1.jpg">
+			<img src="skate1.jpg">
 			<div class="layer">
 				<h3>ALMOST</h3>
 			</div>
 		</div>
 		<div class="brand-col">
-			<img src="image/skate2.jpg" >
+			<img src="skate2.jpg" >
 			<div class="layer">
 				<h3>Santa Cruz</h3>
 			</div>
 		</div>
 		<div class="brand-col">
-			<img src="image/skate3.jpg">
+			<img src="skate3.jpg">
 			<div class="layer">
 				<h3>Ripndip</h3>
 			</div>
@@ -111,7 +111,7 @@
 	<h1>our skatepark</h1>
 	<p>learn how to skate with us </p>
 		<div class="skatepark-col">
-			<center><img src="image/skateparck1.jpg"></center>
+			<center><img src="skateparck1.jpg"></center>
 			<h3>world most biggest Skateparck</h3>
 			<p>learn how to skate board with us </p>
 		</div>
