--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  	<link rel="shortcut icon" type="image" href="icone.png">
+  	<link rel="shortcut icon" type="image" href="image/icone.png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SkateShop</title>
     <link rel="stylesheet" href="style.css" />
-	  <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;1,200;1,500&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
 <script src="https://kit.fontawesome.com/b64577fe18.js" crossorigin="anonymous"></script>
@@ -54,6 +54,9 @@
           </li>
           <li>
             <a href="#contact" style="--i: 0.25s;">contact</a>
+          </li>
+          <li>
+            <a href="login.html" style="--i: 0.25s;">sign up</a>
           </li>
         </ul>
       </div>
@@ -159,12 +162,14 @@
 <section class="footer" id="contact">
 	<h4>about us</h4>
 	<p>Email: skatecompanies@gmail.com</p>
-	<div class="icons">
+	<marquee width="60%" direction="left"  height="100px">
+	<div class="icons" align="center">
 		<i class="fab fa-facebook"></i>
 		<i class="fab fa-twitter"></i>
 		<i class="fab fa-instagram"></i>
 	</div>
-	<p>Made with <i class="far fa-heart"></i> by mohamed boussaada</p>
+	<p align="center">Made with <i class="far fa-heart"></i> by mohamed boussaada</p>
+</marquee>
 </section>
      
     <script src="app.js"></script>
