--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
 
               <div class="inner">
                 <div class="text-box">
-                	<button class="btn2"><a href="SkateShop.html">home</a></button>
+                	<button class="btn2"><a href="index.html">home</a></button>
    	               <form class="border p-5">
     	<div class="form-group">
     	    <div class="row">
